# FastAPI-PostgreSQL-shop

./: README.md  docker-compose.yaml
Faker_for_100000/: aker.py  pyproject.toml
backend/: .env  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2023-12-03_database_creation.py  2023-12-03_store.py  2023-12-17_add_validations_to_user.py  2023-12-17_change_category.py  2023-12-17_change_models.py  2023-12-17_change_order.py  2023-12-17_database_creation.py  2023-12-17_db_create.py  2023-12-20_add_constaints.py
backend/src/: config.py  database.py  main.py  test.py
backend/src/auth/: base_config.py  manager.py  models.py  schemas.py
backend/src/store/: models.py
backend/src/store/categories/: router.py  schemas.py
backend/src/store/comments/: router.py  schemas.py
backend/src/store/orders/: router.py  schemas.py
backend/src/store/products/: router.py  schemas.py
backend/src/templates/: create_product.html  edit_image_product.html
backend/templates/: create_product.html
faker/: pyproject.toml
frontend/vite-project/: index.html  package-lock.json  package.json
frontend/vite-project/src/: AdminPage.jsx  App.jsx  CategoryPanel.jsx  DataTable.jsx  MenuAppBar.jsx  ProductList.jsx  ProductPage.jsx  Profile.jsx  ProfilePage.jsx  ProtectedRoute.jsx  RegisterComponent.jsx  login.jsx  useAuth.jsx
images/: Диаграмма без названия.drawio
json/: export_import_funcs.sql
